--- a/vercel.json
+++ b/vercel.json
@@ -8,5 +8,6 @@
   ],
   "env": {
     "NEXT_PUBLIC_API_BASE_URL": "https://crypto-rewards-api.herokuapp.com/api"
-  }
+  },
+  "installCommand": "npm install --force"
 } 
