--- a/.npmrc
+++ b/.npmrc
@@ -1,4 +1,8 @@
 legacy-peer-deps=true
 force=true
 registry=https://registry.npmjs.org/
-save-exact=true 
+save-exact=true
+production=false
+unsafe-perm=true
+prefer-dedupe=false
+fund=false 
