--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A website to compare staking, campaign, and other rewards offered by crypto exchanges and DeFi programs available in Turkey.",
   "scripts": {
     "dev": "next dev",
-    "build": "npm install --force && next build",
+    "build": "npm install --force --production=false && next build",
     "start": "next start",
     "lint": "next lint",
     "backend": "python backend/app.py",
@@ -30,12 +30,12 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-sparklines": "^1.7.0",
-    "typescript": "^5.3.3"
+    "typescript": "^5.3.3",
+    "tailwindcss": "^3.4.0",
+    "autoprefixer": "^10.4.16",
+    "postcss": "^8.4.32"
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.16",
-    "concurrently": "^8.2.2",
-    "postcss": "^8.4.32",
-    "tailwindcss": "^3.4.0"
+    "concurrently": "^8.2.2"
   }
 }
