# Implement live data scraping for Turkish crypto exchanges

--- a/.gitignore
+++ b/.gitignore
@@ -9,8 +9,8 @@
 /coverage
 
 # next.js
-/.next/
-/out/
+.next/
+out/
 
 # production
 /build
@@ -70,3 +70,13 @@ backend/data/
 .vscode/
 *.swp
 *.swo
+
+# OS
+Thumbs.db
+
+# Environment variables
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
