--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -4,4 +4,5 @@ requests==2.26.0
 beautifulsoup4==4.10.0
 apscheduler==3.8.1
 python-dotenv==0.19.1
-gunicorn==20.1.0 
+gunicorn==20.1.0
+schedule==1.2.0 
