Added Turkish crypto exchange logos and updated API mock data with all seven exchanges

--- a/.gitignore
+++ b/.gitignore
@@ -9,8 +9,8 @@
 /coverage
 
 # next.js
-.next/
-out/
+/.next/
+/out/
 
 # production
 /build
@@ -27,12 +27,14 @@ yarn-error.log*
 
 # local env files
 .env*.local
+.env
 
 # vercel
 .vercel
 
 # typescript
 *.tsbuildinfo
+next-env.d.ts
 
 # python
 __pycache__/
@@ -75,7 +77,6 @@ backend/data/
 Thumbs.db
 
 # Environment variables
-.env
 .env.local
 .env.development.local
 .env.test.local
