--- a/package.json
+++ b/package.json
@@ -29,15 +29,17 @@
     "@types/node": "^20.10.5",
     "@types/react": "^18.2.45",
     "@types/react-dom": "^18.2.18",
+    "autoprefixer": "^10.4.16",
     "axios": "^1.6.2",
+    "jspdf": "3.0.1",
+    "jspdf-autotable": "5.0.2",
     "next": "^14.0.4",
+    "postcss": "^8.4.32",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-sparklines": "^1.7.0",
-    "typescript": "^5.3.3",
     "tailwindcss": "^3.4.0",
-    "autoprefixer": "^10.4.16",
-    "postcss": "^8.4.32"
+    "typescript": "^5.3.3"
   },
   "devDependencies": {
     "concurrently": "^8.2.2"
