--- a/crypto-scraper.plist
+++ b/crypto-scraper.plist
@@ -8,7 +8,7 @@
     <array>
         <string>/bin/bash</string>
         <string>-c</string>
-        <string>cd /Users/anadoluaydinli/Desktop/crypto\ website\ project/crypto-rewards-comparison-turkey && source .venv/bin/activate && python3 backend/scraper_service.py</string>
+        <string>cd "/Users/anadoluaydinli/Desktop/crypto website project/crypto-rewards-comparison-turkey" && source .venv/bin/activate && python backend/scraper_service.py</string>
     </array>
     <key>RunAtLoad</key>
     <true/>
