--- a/backend/env.sample
+++ b/backend/env.sample
@@ -27,4 +27,10 @@ UPDATE_INTERVAL_HOURS=6
 
 # Production Settings
 # PORT=5000
-# CORS_ORIGINS=https://your-frontend-domain.com 
+# CORS_ORIGINS=https://your-frontend-domain.com
+
+# Stripe Configuration
+STRIPE_SECRET_KEY=sk_test_your_test_key
+STRIPE_WEBHOOK_SECRET=whsec_your_webhook_secret
+STRIPE_MONTHLY_PRICE_ID=price_your_monthly_id
+STRIPE_ANNUAL_PRICE_ID=price_your_annual_id 
