--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -16,4 +16,4 @@ itsdangerous==2.0.1
 Flask-Limiter==2.6.0
 SQLAlchemy==1.4.27
 psycopg2-binary==2.9.3
-alembic==1.7.5 
+alembic==1.7.5 stripe==12.1.0
