--- a/package.json
+++ b/package.json
@@ -26,18 +26,30 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@headlessui/react": "2.2.3",
+    "@heroicons/react": "2.2.0",
     "@types/node": "^20.10.5",
     "@types/react": "^18.2.45",
     "@types/react-dom": "^18.2.18",
+    "aos": "2.3.4",
     "autoprefixer": "^10.4.16",
     "axios": "^1.6.2",
+    "chart.js": "4.4.9",
+    "framer-motion": "12.11.3",
+    "gsap": "3.13.0",
     "jspdf": "3.0.1",
     "jspdf-autotable": "5.0.2",
+    "lottie-react": "2.4.1",
     "next": "^14.0.4",
     "postcss": "^8.4.32",
     "react": "^18.2.0",
+    "react-chartjs-2": "5.3.0",
+    "react-countup": "6.5.3",
     "react-dom": "^18.2.0",
+    "react-intersection-observer": "9.16.0",
+    "react-slick": "0.30.3",
     "react-sparklines": "^1.7.0",
+    "react-spring": "9.7.5",
     "tailwindcss": "^3.4.0",
     "typescript": "^5.3.3"
   },
