Fix build errors, port conflicts, and enhance error handling

--- a/package.json
+++ b/package.json
@@ -3,13 +3,13 @@
   "version": "1.0.0",
   "description": "A website to compare staking, campaign, and other rewards offered by crypto exchanges and DeFi programs available in Turkey.",
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -p 3000",
     "build": "npm install --force --production=false && next build",
-    "start": "next start",
+    "start": "next start -p 3000",
     "lint": "next lint",
     "backend": "python backend/app.py",
     "dev:backend": "cd backend && python app.py",
-    "dev:frontend": "next dev",
+    "dev:frontend": "next dev -p 3000",
     "dev:all": "concurrently \"npm run dev:backend\" \"npm run dev:frontend\"",
     "scraper:start": "./start-scraper.sh",
     "scraper:stop": "./stop-scraper.sh",
